--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,20 @@
 <!-- TODO: make the header a responsive navigation menu with responsive layout -->
 <!-- Create a link to the people component/page -->
-<header>
-    <div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">People</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <a class="navbar-brand" href="#">Landgate</a>
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" [routerLink]="['/home']" routerLinkActive="active" (click)="isMenuCollapsed = true">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/people" (click)="isMenuCollapsed = true">People</a>
+      <a class="nav-item nav-link" routerLink="/people-ngrx" (click)="isMenuCollapsed = true">People <small>(NGRX)</small></a>
+      <a class="nav-item nav-link" href="#" (click)="isMenuCollapsed = true">About</a>
+      <a class="nav-item nav-link" href="#" (click)="isMenuCollapsed = true">Blog</a>
+      <a class="nav-item nav-link" href="#" (click)="isMenuCollapsed = true">Contact</a>
     </div>
-</header>
+  </div>
+</nav>
