--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<div class="content" style="display: none">
+  <span>landgate-ui-test app is running!</span>
+</div>
