--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,20 @@
 <!-- TODO center text horizontally and vertically and style color white -->
-<section>
-    <div>        
-        <h1>LandGate Test</h1>
+<section class="section-1">
+    <div>
+        <h1 class="content-text">LandGate Test</h1>
     </div>
+</section>
+<section class="section-2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md" *ngFor="let resource of resources">
+        <div class="card">
+          <img [src]="resource.img">
+          <h3>{{resource.label}}</h3>
+          <p>{{resource.description}}</p>
+          <a href="#">Learn more...</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
