--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,37 @@
-section{
-    background-image: url("/assets/images/hero-bg.jpg");
-    width:auto;
-    height: 300px;
+:host {
+  font-family: Arial, sans-serif;
+}
+
+.section-1 {
+  background-image: url("/assets/images/hero-bg.jpg");
+  width: auto;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-text {
+  color: #FFF;
+}
+
+.section-2 {
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+  padding: 1em;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  margin: 1em;
+  min-height: 18em;
+}
+
+h3 {
+  margin: 0.5em auto;
 }
