--- a/src/app/components/people-ngrx/people-ngrx.component.html
+++ b/src/app/components/people-ngrx/people-ngrx.component.html
@@ -1,4 +1,50 @@
-<p>People Component</p>
-TODO: Show all people on this screen
-  TODO Implement a person-component that displays the details of a person.
-Add a way to select and then edit a individual person.  There should be options to save and cancel the edit.  Cancelling an edit will result in no changes being made to the selected person.
+<!--<p>People Component</p>-->
+<!--TODO: Show all people on this screen-->
+<!--  TODO Implement a person-component that displays the details of a person.-->
+<!--Add a way to select and then edit a individual person.  There should be options to save and cancel the edit.  Cancelling an edit will result in no changes being made to the selected person.-->
+
+
+<div class="card">
+  <h2 class="page-title">People&nbsp;<small>(NGRX)</small></h2>
+
+  <small class="form-text text-muted table-instructions">Select row to edit.</small>
+
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Age</th>
+      <th scope="col">Job Title</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let person of people$ | async; index as i" (click)="onEditClick(person, personContent)" class="table-row">
+      <td>
+        {{ person.firstName }}
+      </td>
+      <td>
+        {{ person.lastName }}
+      </td>
+      <td>
+        {{ person.age }}
+      </td>
+      <td>
+        {{ person.jobTitle }}
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+<ng-template #personContent let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Edit Person</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <app-person-ngrx [person]="personToEdit" (closeEvent)="modal.dismiss($event)"></app-person-ngrx>
+  </div>
+</ng-template>
